ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vsanchez
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    http:
      paths:
      - path: /dev-vsanchez
        pathType: Prefix
        backend:
          service:
            name: frontend-development
            port:
              number: 80
      - path: /prod-vsanchez
        pathType: Prefix
        backend:
          service:
            name: frontend-production
            port:
              number: 80
